force-app/main/default/objects/Clue_Answer_Pair__c/fields/Answer_ID__c.field-meta.xml
<CustomField>
    <fullName>Answer_ID__c</fullName>
    <label>Answer ID</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>