force-app/main/default/objects/Clue_Answer_Pair__c/fields/Answer_Row__c.field-meta.xml
<CustomField>
    <fullName>Answer_Row__c</fullName>
    <label>Answer Row</label>
    <referenceTo>Answer_Row__c</referenceTo>
    <relationshipLabel>Clue-Answer Pairs</relationshipLabel>
    <relationshipName>Clue_Answer_Pair</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>