force-app/main/default/objects/Clue_Answer_Pair__c/fields/Clue__c.field-meta.xml
<CustomField>
    <fullName>Clue__c</fullName>
    <label>Clue</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>