force-app/main/default/objects/Clue_Answer_Pair__c/fields/Puzzle__c.field-meta.xml
<CustomField>
    <fullName>Puzzle__c</fullName>
    <label>Puzzle</label>
    <referenceTo>Puzzle__c</referenceTo>
    <relationshipName>Clues</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>